--- a/tanni/templates/tanni/index.html
+++ b/tanni/templates/tanni/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
 </head>
 <body>
-    Hello World.
+    <p>{{ user }}さんこんにちは。</p>
+    <p>Hello World.</p>
 </body>
 </html>
