--- a/account/templates/account/loginnew.html
+++ b/account/templates/account/loginnew.html
@@ -1,15 +1,4 @@
-<!DOCTYPE html>
-<html lang="ja">
-<head>
-  <title>Sign Up</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-</head>
-<body>
+{% block content %}
 
 <div class="jumbotron text-center">
   <h1>スラサポ</h1>
@@ -50,6 +39,4 @@
         <div class="col-sm-5"></div>
     </div>
 </div>
-
-</body>
-</html>
+{% endblock %}
