--- a/tanni/templates/tanni/home.html
+++ b/tanni/templates/tanni/home.html
@@ -32,7 +32,7 @@
             <tbody>
               <tr>
                 <th scope="row">1限</th>
-                <td></td>
+                <td>テスト</td>
                 <td></td>
                 <td></td>
                 <td></td>
