--- a/tanni/templates/tanni/userlist.html
+++ b/tanni/templates/tanni/userlist.html
@@ -34,19 +34,22 @@
             <option>4</option>
         </select>年
     </p>
-
-    <table class = "table table-hover table-sm">
-        <tr>
-            <th>学籍番号</tr><th>名前</tr>
-        </tr>
-        <tr>
-            <th >aa00001</tr><th>AbcdEfgh</tr>
-        </tr>
-        <!--
-            行のテンプレート
-        <tr>
-            <th></tr><th></tr>
-        </tr>
-        -->
-    </table>
+    <div class="table-responsive">
+        <table class="table table-hover table-sm">
+            <thead class="thead-light">
+                <tr>
+                    <th>学籍番号</th>
+                    <th>名前</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for usr in user_all %}
+                <tr>
+                    <td>{{ usr.student_id }} </td>
+                    <td>{{ usr.username }} </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
