--- a/tanni/templates/tanni/home.html
+++ b/tanni/templates/tanni/home.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
-          <h2 class="text-center"><a href="#">履修状況変更</a></h2>
+          <h2 class="text-center"><a href="{% url 'reg' %}">履修状況変更</a></h2>
           <h5 class="text-center">自分の履修状況を確認・変更する</h5>
           <table class="table table-striped table-bordered">
             <thead>
@@ -79,7 +79,7 @@
           </table>
           <p>aaaa</p>
           <br>
-          <h2 class="text-center"><a href="#">シミュレーション</a></h2>
+          <h2 class="text-center"><a href="{% url 'sim' %}}">シミュレーション</a></h2>
           <h5 class="text-center">卒業要件の単位数計算</h5>
           <br>
           <h2 class="text-center"><a href="{% url 'userlist' %}">ユーザ一覧</a></h2>
