--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -7,40 +7,32 @@
 </div>
   
 <div class="container">
-    <div class="row">
-        <div class="col-sm-3"></div>
-            <div class="col-sm-6">
-                <h2 style="text-align:center">ログイン</h2>
-                <form action="/action_page.php">
-                <div class="form-group">
-                    <label for="usr">Username:</label>
-                    <input type="text" class="form-control" id="usr" name="user_id" placeholder="aa00000@shibaura-it.ac.jp">
-                </div>
-                <div class="form-group">
-                    <label for="pwd">Password:</label>
-                    <input type="password" class="form-control" id="pwd" name="PW" placeholder="8-16文字半角">
-                </div>
+    <div class="col-md-6 offset-md-3">
+        <h2 style="text-align:center">ログイン</h2>
+        <div class="card">
+            <div class="card-body">
+                <form action="" method="POST">
+                    {{ form.non_field_errors }}
+                    {% for field in form %}
+                    {{ field }}
+                    {{ field.errors }}
+                    {% if forloop.last %}
+                        {% else %}
+                        <br>
+                    {% endif %}
+                    {% endfor %}
+                    <hr>
+                    <button type="submit" class="btn btn-primary" >ログイン</button>
+                    <input type="hidden" name="next" value="{{ next }}" />
+                    {% csrf_token %}
                 </form>
-                <!--error_messageはここに入れる-->
-                <p class="text-danger"></p>
             </div>
-        <div class="col-sm-3"></div>
-    </div>
-    <div class="row">
-        <div class="col-sm-5"></div>
-        <div class="col-sm-2">
-            <button type="submit" class="btn btn-primary">ログイン</button>
         </div>
-        <div class="col-sm-2">
-            <button type="submit" class="btn btn-primary">新規登録</button>
-        </div>
-        <div class="col-sm-3"></div>
-    </div>
-    <div>
-    <p></p>
-    <p class="text-center">
-        <a href="#" class="text-primary">パスワードを忘れた</a>
-    </p>
+        <!--<button type="submit" class="btn btn-primary">新規登録</button>-->
+        <br>
+        <p class="text-center">
+            <a href="#" class="text-primary">パスワードを忘れた</a>
+        </p>
     </div>
 </div>
 
