--- a/tanni/templates/tanni/base.html
+++ b/tanni/templates/tanni/base.html
@@ -17,21 +17,21 @@
             <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'home' %}">ホーム</a>
+                        <a class="nav-link" href="{% url 'tanni:home' %}">ホーム</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reg' %}">履修状況確認</a>
+                        <a class="nav-link" href="{% url 'tanni:reg' %}">履修状況確認</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'sim' %}">シミュレーション</a>
+                        <a class="nav-link" href="{% url 'tanni:sim' %}">シミュレーション</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'userlist' %}">ユーザ一覧</a>
+                        <a class="nav-link" href="{% url 'tanni:userlist' %}">ユーザ一覧</a>
                     </li>
                 </ul>
             </div>  
         </nav>
-        <div class="container" style="margin-top:30px">
+        <div class="container mt-4">
             {% block content %}{% endblock %}
         </div>
         {% block script %}{% endblock %}
