--- a/tanni/templates/tanni/userinfo.html
+++ b/tanni/templates/tanni/userinfo.html
@@ -1,84 +1,65 @@
-<!doctype html>
-<html lang="ja">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
-        <title>スラサポ</title>
-    </head>
-        <body>
-            <p>aa00001としてログインしています。</p>
-            <p>ホーム画面へ戻る</p>
-            <p>Aさん(AA12345)の履修科目</p>
-            <p>
-            <!--時間割…授業名と教員名(イニシャル)を表示-->
-                <table class = "table table-hover table-sm table-bordered">
-                <tr class = "table-primary">
-                    <th>\</th>
-                    <th>月</th>
-                    <th>火</th>
-                    <th>水</th>
-                    <th>木</th>
-                    <th>金</th>
-                    <th>土</th>
-                </tr>
-                <tr>
-                    <th>1</th>
-                    <th>Math<br>T.S</th>
-                    <th>Java<br>T.S</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>2</th>
-                    <th>CLanguage<br>I.S</th>
-                    <th></th>
-                    <th>ComputerArchitecture<br>K.U</th>
-                    <th></th>
-                    <th>English<br>Y.S</th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>3</th>
-                    <th></th>
-                    <th>Science<br>E.F</th>
-                    <th></th>
-                    <th>DataStructure&Algorythm<br>H.I</th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>4</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                <tr>
-                    <th>5</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-                
-            </table>
-        </p>
-
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
-</html>
+{% extends 'tanni/base.html' %}
+{% block content %}
+    <p>aa00001としてログインしています。</p>
+    <p>ホーム画面へ戻る</p>
+    <p>Aさん(AA12345)の履修科目</p>
+    <p>
+    <!--時間割…授業名と教員名(イニシャル)を表示-->
+        <table class = "table table-hover table-sm table-bordered">
+        <tr class = "table-primary">
+            <th>\</th>
+            <th>月</th>
+            <th>火</th>
+            <th>水</th>
+            <th>木</th>
+            <th>金</th>
+            <th>土</th>
+        </tr>
+        <tr>
+            <th>1</th>
+            <th>Math<br>T.S</th>
+            <th>Java<br>T.S</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <th>2</th>
+            <th>CLanguage<br>I.S</th>
+            <th></th>
+            <th>ComputerArchitecture<br>K.U</th>
+            <th></th>
+            <th>English<br>Y.S</th>
+            <th></th>
+        </tr>
+        <tr>
+            <th>3</th>
+            <th></th>
+            <th>Science<br>E.F</th>
+            <th></th>
+            <th>DataStructure&Algorythm<br>H.I</th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <th>4</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+        <tr>
+            <th>5</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>                
+    </table>
+</p>
+{% endblock %}
