--- a/tanni/templates/tanni/home.html
+++ b/tanni/templates/tanni/home.html
@@ -16,15 +16,7 @@
         <div class="col-sm-2"></div>
         <div class="col-sm-8">
         <h2 class="text-center"><a href="{% url 'tanni:reg' %}">履修状況変更</a></h2>
-        <h5 class="text-center">自分の履修状況を確認・変更する</h5>
-        {% for tt in time_table %}
-            {{ forloop.counter }}: 
-            {{ tt.course_id.week }}
-            {{ tt.course_id.subject_id.title }}
-            <br>
-        {% endfor %}
-
-        
+        <h5 class="text-center">自分の履修状況を確認・変更する</h5>        
         <table class="table table-striped table-bordered">
             <thead>
                 <tr>
@@ -38,62 +30,19 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- <tr>
-                    {% for tt in time_table %}
+                {% for jk in jikanwari %}
+                <tr>
                     <th scope="row">{{ forloop.counter }}限</th>
-                        <td>{{ tt.course_id.subject_id.title }}</td>
+                    {% for j in jk %}
+                        <td>{{ j }}</td>
                     {% endfor %}
-                </tr> -->
-                <tr>
-                    <th scope="row">1限</th>
-                    <td>テスト</td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
                 </tr>
-                <tr>
-                    <th scope="row">2限</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">3限</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">4限</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-                <tr>
-                    <th scope="row">5限</th>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
+                {% endfor %}
             </tbody>
         </table>
         <p>aaaa</p>
         <br>
-        <h2 class="text-center"><a href="{% url 'tanni:sim' %}}">シミュレーション</a></h2>
+        <h2 class="text-center"><a href="{% url 'tanni:sim' %}">シミュレーション</a></h2>
         <h5 class="text-center">卒業要件の単位数計算</h5>
         <br>
         <h2 class="text-center"><a href="{% url 'tanni:userlist' %}">ユーザ一覧</a></h2>
