時間割データを取得

--- a/tanni/templates/tanni/home.html
+++ b/tanni/templates/tanni/home.html
@@ -30,7 +30,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for jk in jikanwari %}
+                {% for jk in time_table %}
                 <tr>
                     <th scope="row">{{ forloop.counter }}限</th>
                     {% for j in jk %}
