--- a/tanni/templates/tanni/base.html
+++ b/tanni/templates/tanni/base.html
@@ -6,6 +6,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         {% block style %}{% endblock %}
     </head>
     <body>
@@ -29,7 +32,17 @@
                         <a class="nav-link" href="{% url 'tanni:userlist' %}">ユーザ一覧</a>
                     </li>
                 </ul>
-            </div>  
+            </div>
+            <div class="dropdown">
+                <a class="dropdown-toggle text-secondary" data-toggle="dropdown" href="#">
+                    <!--ユーザー名-->
+                    AA00000
+                </a>
+                <span class="dropdown-menu">
+                    <a class="dropdown-item" href="#">ログアウト</a>
+                </span>
+            </div>
+            <h6 class="text-secondary">にログイン中</h6>
         </nav>
         <div class="container mt-4">
             {% block content %}{% endblock %}
