bannerのsignoutボタンを変えた

--- a/tanni/templates/tanni/base.html
+++ b/tanni/templates/tanni/base.html
@@ -30,16 +30,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="dropdown">
-                <a class="dropdown-toggle text-secondary" data-toggle="dropdown" href="#">
-                    <!--ユーザー名-->
-                    AA00000
-                </a>
-                <span class="dropdown-menu">
-                    <a class="dropdown-item" href="#">ログアウト</a>
-                </span>
-            </div>
-            <h6 class="text-secondary">にログイン中</h6>
+            <!--ここにユーザー名を入れる-->
+            <h6 class="text-white text-nowrap">ようこそAA00000 /&nbsp;</h6>
+            <a href="#" class="text-primary text-nowrap">ログアウト</a>
         </nav>
         <div class="container mt-4">
             {% block content %}{% endblock %}
