--- a/tanni/templates/tanni/home.html
+++ b/tanni/templates/tanni/home.html
@@ -2,53 +2,52 @@
 {% block content %}
 <div class="row">
     <div class="col-sm-3"></div>
-        <div class="col-sm-6">
-            <h2 style="text-align:center">ホーム</h2>
-            <p class="text-danger">
-                <!--error_messageはここに入れる-->
-                <!--username error, password error, confirmation error-->
-            </p>
-        </div>
-        <div class="col-sm-3"></div>
+    <div class="col-sm-6">
+        <h2 style="text-align:center">ホーム</h2>
+        <p class="text-danger">
+            <!--error_messageはここに入れる-->
+            <!--username error, password error, confirmation error-->
+        </p>
     </div>
+    <div class="col-sm-3"></div>
+</div>
 
-    <div class="row">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-8">
+<div class="row">
+    <div class="col-sm-12">
         <h2 class="text-center"><a href="{% url 'tanni:reg' %}">履修状況変更</a></h2>
-        <h5 class="text-center">自分の履修状況を確認・変更する</h5>        
-        <table class="table table-striped table-bordered">
-            <thead>
-                <tr>
-                    <th scope="col"></th>
-                    <th scope="col">月</th>
-                    <th scope="col">火</th>
-                    <th scope="col">水</th>
-                    <th scope="col">木</th>
-                    <th scope="col">金</th>
-                    <th scope="col">土</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for jk in time_table %}
-                <tr>
-                    <th scope="row">{{ forloop.counter }}限</th>
-                    {% for j in jk %}
+        <h5 class="text-center">自分の履修状況を確認・変更する</h5>
+        <div class="table-responsive">
+            <table class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col" style="width: 10%">時限</th>
+                        <th scope="col" style="width: 15%" class="text-center">月</th>
+                        <th scope="col" style="width: 15%" class="text-center">火</th>
+                        <th scope="col" style="width: 15%" class="text-center">水</th>
+                        <th scope="col" style="width: 15%" class="text-center">木</th>
+                        <th scope="col" style="width: 15%" class="text-center">金</th>
+                        <th scope="col" style="width: 15%" class="text-center">土</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for jk in time_table %}
+                    <tr>
+                        <th scope="row">{{ forloop.counter }}限</th>
+                        {% for j in jk %}
                         <td>{{ j }}</td>
+                        {% endfor %}
+                    </tr>
                     {% endfor %}
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        <p>aaaa</p>
+                </tbody>
+            </table>
+        </div>
+<!--        <p>aaaa</p>   -->
         <br>
         <h2 class="text-center"><a href="{% url 'tanni:sim' %}">シミュレーション</a></h2>
         <h5 class="text-center">卒業要件の単位数計算</h5>
         <br>
         <h2 class="text-center"><a href="{% url 'tanni:userlist' %}">ユーザ一覧</a></h2>
         <h5 class="text-center">他のユーザの履修状況を確認する</h5>
-        </div>
-        <div class="col-sm-2"></div>
     </div>
 </div>
 
