--- a/tanni/templates/tanni/reg.html
+++ b/tanni/templates/tanni/reg.html
@@ -1,6 +1,5 @@
-<html>
-
-<head>
+{% extends 'tanni/base.html' %}
+{% block style %}
 <style>
 * {
   box-sizing: border-box;
@@ -20,7 +19,7 @@ table.a {
 table.b {
   font-family: arial, sans-serif;
   border-collapse: collapse;
-  width: 30%;
+  width: 10%;
 }
 
 td, th {
@@ -45,7 +44,6 @@ section:after {
   clear: both;
 }
 
-
 #myDIV {
   width: 100%;
   padding: 0px 0;
@@ -65,7 +63,7 @@ section:after {
 #myDIV3 {
   width: 100%;
   padding: 0px 0;
-  text-align: right;
+  text-align: left;
   background-color: none;
   margin-top: 0px;
 }
@@ -74,36 +72,26 @@ section:after {
     color: red;
 }
 </style>
-
-</head>
-<body>
-<div class="right">
-<p><a href="http://www.google.com">登録を中止しホーム画面へ</a></p>
-</div>
+{% endblock %}
+{% block content %}
 科目の登録・変更を行います。<br>
 下の時間割から登録・変更したい時間をクリックしてください。<br>
 <table class="a" id="display-table">
-<thead>
-<th></th><th>月</th><th>火</th><th>水</th><th>木</th><th>金</th><th>土</th>
-</thead>
-<tbody>
-<tr>
-<th>9:00-10:40</th><td>bla</td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<th>10:50-12:30</th><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<th>13:10-14:50</th><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<th>15:00-16:40</th><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-<tr>
-<th>16:50-18:30</th><td></td><td></td><td></td><td></td><td></td><td></td>
-</tr>
-</tbody>
+	<thead>
+		<th></th><th>月</th><th>火</th><th>水</th><th>木</th><th>金</th><th>土</th>
+	</thead>
+	<tbody>
+		{% for jk in time_table %}
+        <tr>
+            <th scope="row">{{ forloop.counter }}限</th>
+            {% for j in jk %}
+                <td>{{ j }}</td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+	</tbody>
 </table>
+
 <div id="myDIV5" style="display:none"><p>
 	選択中：<a id=week></a>曜<a id=period></a>限(現在登録科目：<a id=cSubjID></a>)<br>
 		<button onclick="myFunction();myFunction5();">変更する</button>
@@ -113,67 +101,70 @@ section:after {
 			<input type="submit" value="削除する"><br><br>
 		</form>
 </p></div>
+
+
 <section>
 <nav>
-<div id="myDIV" style="display:none"><p>
-選択中：<a id=week></a>曜<a id=period></a>限(現在登録科目：<a id=cSubjID></a>)<br>
-科目群を選択してください。<br>
-<table class="b" id="display-table-2">
-<tr>
-<td>専門</td>
-</tr>
-<tr>
-<td>共通数理</td>
-</tr>
-<tr>
-<td>言語・情報系</td>
-</tr>
-<tr>
-<td>人文社会系教養</td>
-</tr>
-<tr>
-<td>共通健康</td>
-</tr>
-<tr>
-<td>共通工学系教養</td>
-</tr>
-</table>
-</p></div>
+	<div id="myDIV" style="display:none"><p>
+		選択中：<a id=week></a>曜<a id=period></a>限(現在登録科目：<a id=cSubjId></a>)<br>
+		科目群を選択してください。<br>
+		<table class="b" id="display-table-2">
+			<tr>
+				<td>専門</td>
+			</tr>
+			<tr>
+				<td>共通数理</td>
+			</tr>
+			<tr>
+				<td>言語・情報系</td>
+			</tr>
+			<tr>
+				<td>人文社会系教養</td>
+			</tr>
+			<tr>
+				<td>共通健康</td>
+			</tr>
+			<tr>
+				<td>共通工学系教養</td>
+			</tr>
+		</table>
+	</p></div>
 </nav>
 <article>
-<div id="myDIV2" style="display:none"><p>
-追加したい科目名をクリックしてください。
-<div id="myDIV4"><p>
-<table class="a" id="display-table-3">
-<thead>
-<th>科目群</th><th>科目名</th><th>教員</th><th>キャンパス</th><th>単位</th>
-</thead>
-<tbody>
-<tr>
-<td>bla</td><td>ba</td><td>b</td><td>a</td><td>1</td>
-</tr>
-<tr>
-<td></td><td></td><td></td><td></td><td></td>
-</tr>
-</tbody>
-</table>
-</p></div>
-</p></div>
+	<div id="myDIV2" style="display:none"><p>
+	追加したい科目名をクリックしてください。
+	<div id="myDIV4"><p>
+	<table class="a" id="display-table-3">
+		<thead>
+			<th>科目群</th><th>科目名</th><th>教員</th><th>キャンパス</th><th>単位</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td></td><td>bla</td><td></td><td></td><td></td>
+			</tr>
+			<tr>
+				<td></td><td></td><td></td><td></td><td></td>
+			</tr>
+		</tbody>
+	</table>
+	</p></div>
+	</p></div>
 </article>
 </section>
 <div id="myDIV3" style="display:none"><p>
-<br><br>（選択中：<a id=nSubjID></a>）
-<form action="">
-	<input type="hidden" id="week" name="曜日">
-	<input type="hidden" id="period" name="時限">
-	<input type="hidden" id="nSubjGrpID" name="科目群名">
-	<input type="hidden" id="nSubjID" name="科目名">
-	<input type="hidden" id="tchr" name="教員">
-	<input type="hidden" id="cmp" name="キャンパス">
-	<input type="hidden" id="crd" name="単位">
-	<input type="submit" value="追加する"><br><br>
-</form>
-</p></div>
+	<br><br>（選択中：<a id=nSubjId></a>）
+		<form action="">
+			<input type="hidden" id="week" name="曜日">
+			<input type="hidden" id="period" name="時限">
+			<input type="hidden" id="nSubjGrpId" name="科目群名">
+			<input type="hidden" id="nSubjId" name="科目名">
+			<input type="hidden" id="tchr" name="教員">
+			<input type="hidden" id="cmp" name="キャンパス">
+			<input type="hidden" id="crd" name="単位">
+			<input type="submit" value="追加する"><br><br>
+		</form>
+	</p></div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script>
 var CF = 0;
 var CF2 = [0,0,0,0,0,0];
@@ -181,12 +172,12 @@ var SF = 0;
 var CF3 = 0;
 var week = "";
 var period = 0;
-var nSubjGrpID = "";
-var nSubjID = "";
+var nSubjGrpId = "";
+var nSubjId = "";
 var tchr = "";
 var cmp = "";
 var crd = 0;
-var cSubjID = "";
+var cSubjId = "";
 var ZF = (currentValue) => currentValue == 0;
 function myFunction() {
   var x = document.getElementById("myDIV");
@@ -228,13 +219,12 @@ function myFunction5(){
   }
 }
 
-//function subjLoad(CF2){//数字じゃなくて文字を代数にする場合＞CF2->table.rows[rowId].innerHTML
+function subjLoad(CF2){
 	/* CF2[]=科目群、0=専門、1=共通数理… */
-//	url = /* お願いします */;
-//	$("myDIV4").load(/* お願いします */);
-//}
-
-
+	url = /* お願いします */;
+	$("myDIV4").load(url);
+}	
+	
 
 choose1();
 function choose1() {
@@ -275,9 +265,9 @@ function choose1() {
             CellSelected.className += " selected";
 			rowId += 1;
 			if(table.rows[rowId].cells[cellId+1].innerHTML === "")
-				document.getElementById("cSubjID").innerHTML = "無";
+				document.getElementById("cSubjId").innerHTML = "無";
 			else {
-				document.getElementById("cSubjID").innerHTML = table.rows[rowId].cells[cellId+1].innerHTML;
+				document.getElementById("cSubjId").innerHTML = table.rows[rowId].cells[cellId+1].innerHTML;
 			}
 			document.getElementById("week").innerHTML = table.rows[0].cells[cellId+1].innerHTML;
 			document.getElementById("period").innerHTML = rowId;
@@ -299,25 +289,25 @@ function choose2(){
 	var cells = table.getElementsByTagName('td');
 	var rows = table.getElementsByTagName('tr');
 		
-		if(CF === 0 && SF === 1){
-			for(var i = 0; i < rows.length; i++){
-				rows[i].style.backgroundColor = "";
-				rows[i].classList.remove('selected');
-			}
-			CF2.fill(0);
-			SF = 0;
-			myFunction2();
-			return;
+	if(CF === 0 && SF === 1){
+		for(var i = 0; i < rows.length; i++){
+			rows[i].style.backgroundColor = "";
+			rows[i].classList.remove('selected');
 		}
+		CF2.fill(0);
+		SF = 0;
+		myFunction2();
+		return;
+	}
 		
-		for (var i = 0; i < cells.length; i++) {
-			var cell = cells[i];
-			cell.onclick = function () {
-				var rowId = this.parentNode.rowIndex;
-				var rowSelected = table.getElementsByTagName('tr')[rowId];
-				var rowsNotSelected = table.getElementsByTagName('tr');
+	for (var i = 0; i < cells.length; i++) {
+		var cell = cells[i];
+		cell.onclick = function () {
+			var rowId = this.parentNode.rowIndex;
+			var rowSelected = table.getElementsByTagName('tr')[rowId];
+			var rowsNotSelected = table.getElementsByTagName('tr');
 				
-				if (rowSelected.style.backgroundColor === "yellow"){
+			if (rowSelected.style.backgroundColor === "yellow"){
 				rowSelected.style.backgroundColor = "";
 				rowSelected.classList.remove('selected');
 				CF2[rowId] -=1;
@@ -326,11 +316,11 @@ function choose2(){
 					SF = 0;
 				}
 				return;
-				}
+			}
 			rowSelected.style.backgroundColor = "yellow";
-            rowSelected.className += " selected";
+			rowSelected.className += " selected";
 			CF2[rowId] += 1;
-			//subjLoad(CF2);//数字じゃなくて文字を代数にする場合＞CF2->table.rows[rowId].innerHTML
+			subjLoad(CF2);
 			if(CF2.every(ZF) === false && SF === 0){
 				myFunction2();
 				SF = 1;
@@ -355,36 +345,37 @@ function choose3(){
 		myFunction3();
 		return;
 	}
-	
-		for (var i = 0; i < cells.length; i++) {
-			var cell = cells[i];
-			cell.onclick = function () {
-				var rowId = this.parentNode.rowIndex;
-				var rowSelected = table.getElementsByTagName('tr')[rowId];
-				var rowsNotSelected = table.getElementsByTagName('tr');
+		
+	for (var i = 0; i < cells.length; i++) {
+		var cell = cells[i];
+		cell.onclick = function () {
+			var rowId = this.parentNode.rowIndex;
+			var rowSelected = table.getElementsByTagName('tr')[rowId];
+			var rowsNotSelected = table.getElementsByTagName('tr');
 				
-				if (rowSelected.style.backgroundColor === "yellow"){
+			if (rowSelected.style.backgroundColor === "yellow"){
 				rowSelected.style.backgroundColor = "";
 				rowSelected.classList.remove('selected');
 				myFunction3();
 				CF3 = 0;
 				return;
-				}
+			}
 				
-				for (var row = 0; row < rowsNotSelected.length; row++) {
-                rowsNotSelected[row].style.backgroundColor = "";
-                rowsNotSelected[row].classList.remove('selected');
-				}
+			for (var row = 0; row < rowsNotSelected.length; row++) {
+				rowsNotSelected[row].style.backgroundColor = "";
+				rowsNotSelected[row].classList.remove('selected');
+			}
 				
 			rowSelected.style.backgroundColor = "yellow";
-            rowSelected.className += " selected";
+			rowSelected.className += " selected";
 			
 			if(CF3 === 0){
 				myFunction3();
 				CF3 = 1;
 			}
-			document.getElementById("nSubjGrpID").innerHTML = table.rows[rowId].cells[0].innerHTML;
-			document.getElementById("nSubjID").innerHTML = table.rows[rowId].cells[1].innerHTML;
+			
+			document.getElementById("nSubjGrpId").innerHTML = table.rows[rowId].cells[0].innerHTML;
+			document.getElementById("nSubjId").innerHTML = table.rows[rowId].cells[1].innerHTML;
 			document.getElementById("tchr").innerHTML = table.rows[rowId].cells[2].innerHTML;
 			document.getElementById("cmp").innerHTML = table.rows[rowId].cells[3].innerHTML;
 			document.getElementById("crd").innerHTML = table.rows[rowId].cells[4].innerHTML;
@@ -392,7 +383,7 @@ function choose3(){
 	}
 }
 
-</script>
 
-</body>
-</html>
+
+</script>
+{% endblock %}
