--- a/tanni/templates/tanni/reg.html
+++ b/tanni/templates/tanni/reg.html
@@ -168,6 +168,7 @@ section:after {
 <script>
 var CF = 0;
 var CF2 = [0,0,0,0,0,0];
+var subjName = ["専門","共通数理","言語・情報系","人文社会系教養","共通健康","共通工学系教養"];
 var SF = 0;
 var CF3 = 0;
 var week = "";
